fixed spacing issue on modal cards

--- a/src/components/Challenges/challenges.css
+++ b/src/components/Challenges/challenges.css
@@ -150,8 +150,16 @@
         width: 100%;
         height: 10rem;
     }
-    .modal-card p {
-        padding: .5rem .5rem;
+    .modal-card-body {
+        margin-right: .75rem;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+    .modal-card-body h4 {
+        margin-top: -.25rem;
+    }
+    .modal-card-body p {
+        padding: .25rem .25rem;
     }
     .modal-btn {
         height: 2.5rem;
